<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<Button
			android:text="@string/play"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/play_button"
			android:layout_gravity="center"/>

		<Button
			android:text="@string/options"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/options_button"
			android:layout_gravity="center"/>

		<Button
			android:text="@string/quit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/quit_button"
			android:layout_gravity="center"/>
	</LinearLayout>

</LinearLayout>